# softMotion-libs

./: CMakeLists.txt  Doxyfile  QSoftMotionPlannerPlot.m  README.md  bootstrap  courbure_interval.m  segMotion.m
pkgconfig/: CMakeLists.txt  softMotion-libs.pc.cmake
qt/: CMakeLists.txt  QSoftMotionPlanner.cpp  QSoftMotionPlanner.h  curve.cpp  curve.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myPlot.cpp  myPlot.h  ui_mainwindow.h  viewer.cpp  viewer.h
script/CMake/: FindGBM.cmake  FindGL.cmake  FindQGLVIEWER.cmake  FindQWT.cmake  FindQXML.cmake
script/Matlab/: computeJerk.m  saveCurrentFigure.m
src/: CMakeLists.txt  Calcul_cg.c  Calcul_cg.h  Calcul_cg_modif.c  Calcul_cg_modif.h  MakefileTest  Sm_Approx.cpp  Sm_Approx.h  Sm_Curve.cpp  Sm_Curve.h  Sm_Traj.cpp  Sm_Traj.h  debug.c  debug.h  gnuplot_i.cpp  gnuplot_i.hpp  matrix.c  matrix.h  matrixStruct.h  out.txt  softMotion.c  softMotion.h  softMotionConst.h  softMotionStruct.h  softMotionStructGenom.h  svg2traj.cpp  test-diff.c  time.c  time_proto.h
tcl/: CMakeLists.txt  jerkTimeViewer.tcl  pkgIndex.tcl
tclsrc/: CMakeLists.txt  jerk.c  jerk.h  jerk.i
